# arc

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  arc-archive-keyring.asc  install.sh
aptrepo/conf/: distributions
aptrepo/db/: packages.db  references.db  release.caches.db
aptrepo/dists/stable/: InRelease  Release  Release.gpg
aptrepo/pool/main/a/arc-ai/: arc-ai_0.1.0-1_amd64.deb
db/: checksums.db  contents.cache.db  packages.db  release.caches.db
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages  Release
src/: main.rs
